# adult-creator-reputation-passport

./: .editorconfig  .env.example  .gitattributes  .gitignore  Makefile  PLAN.md  README.md  docker-compose.yml  docker-swarm.yml  hermes.yml
.claude/: settings.json
.github/: renovate.json
.github/workflows/: ci.yml  jekyll-gh-pages.yml  packages.yml
contracts/: .env.example  DEPLOY.md  foundry.toml  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
contracts/foundry/script/: Deploy.s.sol
contracts/foundry/test/: PassportSBT.t.sol  ReputationOracle.t.sol
contracts/hardhat/contracts/: AttestationRegistry.sol  DisputeResolutionDAO.sol  EndorsementRegistry.sol  PassportFacade.sol  PassportSBT.sol  ReputationOracle.sol
contracts/hardhat/scripts/: deploy-l2.ts  deploy.ts
contracts/hardhat/test/: AttestationRegistry.test.ts  DisputeResolutionDAO.test.ts  EndorsementRegistry.test.ts  PassportSBT.test.ts  ReputationOracle.test.ts
contracts/typechain-types/: hardhat.d.ts  index.ts
contracts/typechain-types/hardhat/contracts/: AttestationRegistry.ts  DisputeResolutionDAO.ts  EndorsementRegistry.ts  PassportFacade.ts  ReputationOracle.ts  index.ts
docs/: CONTRIBUTING.md  _config.yml  index.html  package-lock.json  package.json  vite.config.ts
docs/ADRS/: ADR-001-monorepo-structure.md  ADR-002-polyglot-service-architecture.md
docs/public/: 404.html
docs/src/: App.tsx  main.tsx
docs/src/pages/: Api.tsx  Architecture.tsx  Contracts.tsx  Deployment.tsx  Home.tsx  Security.tsx
grafana/dashboards/: services.json
grafana/datasources/: datasources.yaml
helm/: Chart.yaml  values.yaml
k8s/base/: go-api-deployment.yaml  kong-deployment.yaml  namespace.yaml  nginx-deployment.yaml  postgres-statefulset.yaml  rust-data-deployment.yaml
kong/: kong.yml
nginx/: Dockerfile  nginx.conf
prometheus/: prometheus.yml
pulumi/programs/infra/: Pulumi.yaml  main.go
src/go/: Dockerfile  go.mod  go.sum
src/go/cmd/server/: main.go
src/go/internal/config/: config.go
src/go/internal/contract/: client.go
src/go/internal/handler/: credential.go  health.go  profile.go  reputation.go
src/go/internal/middleware/: auth.go  cors.go  logger.go  ratelimit.go
src/go/internal/model/: credential.go
src/go/internal/repository/: credential_repo.go  user_repo.go  (+1 more)
src/go/migrations/: 000001_create_users.up.sql  000002_create_credentials.up.sql  000003_create_reputation_scores.up.sql  000004_create_endorsements.up.sql  000005_create_reviews.up.sql  000006_create_audit_logs.up.sql
src/julia/: Dockerfile  Project.toml
src/julia/src/: ReputationAnalytics.jl
src/proto/: credential.proto  health.proto  reputation.proto
src/python/: Dockerfile  pyproject.toml
src/python/app/: main.py  web3_client.py
src/qasm/: Dockerfile  passport_circuit.qasm  quantum_service.py
src/rust/: Cargo.toml  Dockerfile
src/rust/src/analytics-engine/: Cargo.toml
src/rust/src/analytics-engine/src/: main.rs
src/rust/src/crypto-service/: Cargo.toml
src/rust/src/crypto-service/src/: main.rs
src/rust/src/reputation-data/: Cargo.toml
src/rust/src/reputation-data/src/: main.rs
src/typescript/: passport-client.ts
terraform/environments/dev/: main.tf
terraform/modules/ecr/: main.tf
terraform/modules/eks/: main.tf
terraform/modules/elasticache/: main.tf
terraform/modules/rds/: main.tf
terraform/modules/s3/: main.tf
terraform/modules/vpc/: main.tf
tests/load/: k6-script.js
tests/robot/: credentials.robot
tests/robot/keywords/: api_keywords.resource
tests/robot/security/: owasp_top10.robot
(+20 files in other folders)
