[project]
name = "adult-creator-ai"
version = "0.1.0"
description = "AI/ML microservices for Adult Creator Reputation Passport"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "structlog>=24.1.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
ai = ["ollama>=0.3.0", "openai>=1.30.0"]
vector = ["chromadb>=0.5.0", "pymilvus>=2.4.0", "weaviate-client>=4.7.0", "qdrant-client>=1.10.0"]
obs = ["weave>=0.51.0"]
all = ["adult-creator-ai[ai,vector,obs]"]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.backends._legacy:_Backend"
