[package]
name = "analytics-engine"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
datafusion = "44"
arrow = "54"
duckdb = "1.1"
thiserror = "1"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
