[package]
name = "crypto-service"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
ed25519-dalek = { version = "2", features = ["pkcs8"] }
blake3 = "1"
rand = "0.8"
hex = "0.4"
thiserror = "1"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
