[package]
name = "reputation-data"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["http-proto"] }
tracing-opentelemetry = "0.28"
tonic = "0.12"
prost = "0.13"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid"] }
datafusion = { version = "44", optional = true }
arrow = { version = "57", optional = true }
duckdb = { version = "1.1", optional = true }
qdrant-client = { version = "1.13", optional = true }
lancedb = { version = "0.16", optional = true }
iceberg = { version = "0.8", optional = true }
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
prometheus = { version = "0.13", features = ["process"] }
axum-prometheus = "0.7"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
redis = { version = "0.27", features = ["tokio-comp"] }
deadpool-postgres = "0.14"
nats = "0.26"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"

[features]
default = ["duckdb", "datafusion", "arrow"]
full = ["duckdb", "datafusion", "arrow", "qdrant-client", "lancedb", "iceberg"]

[build-dependencies]
tonic-build = "0.12"
